--- a/views/style.css
+++ b/views/style.css
@@ -1,15 +1,19 @@
 .image {
+    content: "";
+    width: 100%;
+    height: 100%;
     margin: auto;
     background: #000;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 .image img {
     width: 100%;
-    opacity: 0.2;
+    opacity: 0.41;
     background-size: cover;
 }
 
 .image-text1 {
-    width: 1200px;
+    width: 100%;
     line-height: 59px;
     text-align: center;
     position: absolute;
@@ -17,29 +21,23 @@
     font-weight: 900;
     font-family: 'Roboto',Arial,sans-serif;
     top: 170px;
-    left: 23%;
-    right: 50%;
-    margin-left: -170px;
     color: white;
     border-radius: 6px;
 }
 
 .image-text2 {
-    width: 1100px;
+    width: 80%;
+    margin: auto;
+    padding-top: 30px;
     line-height: 40px;
     text-align: center;
-    position: absolute;
-    font-size: 21px;
+    font-size: 24px;
     font-family: 'Roboto',Arial,sans-serif;
     font-weight: 900;
     top: 170px;
-    left: 17%;
-    right: 48%;
-    margin-left: -170px;
     color: white;
     border-radius: 6px;
 }
-
 .btn {
     width: 220px;
     height: 50px;
@@ -66,7 +64,7 @@
 
 @keyframes marquee {
     from { transform: translateX(0); }
-    to { transform: translateX(-50%); }
+    to { transform: translateX(-40%); }
 }
 .price{
     padding-top: 50px;
@@ -109,7 +107,49 @@
 .btn-danger{
     width: 10%;
 }
-
+.row1{
+    margin: auto;
+    width: 100%;
+    padding-top: 30px;
+    padding-bottom: 20px;
+}
 .shadow{
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);;
+}
+.card1{
+    text-align: center;
+    margin: auto;
+    height: 380px;
+    width: 470px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.10);
+    background-color: rgb(255, 255, 255);
+}
+.card-title{
+    font-family: 'Roboto',Arial,sans-serif;
+    font-weight: 600;
+    font-size: 30px;
+    color: #000000;
+    padding-bottom: 10px;
+}
+.card-text{
+    font-family: 'Roboto',Arial,sans-serif;
+    font-weight: 300;
+    font-size: 20px;
+    color: #000000;
+}
+.card-body{
+    display: block;
+    padding-top: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.btn1{
+    color: #ffffff;
+    background-color: #e99f19;
+    font-family: 'Roboto',Arial,sans-serif;
+    font-weight: 300;
+    font-size: 20px;
+    margin: auto;
 }
